unpackaged/objects/Awarded_Badge__c.object
<CustomObject>
    <description>Represents the awarding of a particular Badge to a particular User.</description>
    <fields>
        <fullName>Badge_Title__c</fullName>
        <formula>Badge__r.Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Badge Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Badge__c</fullName>
        <label>Badge</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Badge must be active.</errorMessage>
            <filterItems>
                <field>Badge__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Badge__c</referenceTo>
        <relationshipLabel>Awarded To</relationshipLabel>
        <relationshipName>Awarded_Badges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Date in which the Awarded Badge is effective</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Awarded_Badges</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Awarded Badge</label>
    <listViews>
        <fullName>All</fullName>
        <columns>User__c</columns>
        <columns>NAME</columns>
        <columns>Badge_Title__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Awarded_Badges_for_a_Single_User</fullName>
        <columns>User__c</columns>
        <columns>NAME</columns>
        <columns>Badge_Title__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User__c</field>
            <operation>equals</operation>
            <value>rachel tallant</value>
        </filters>
        <label>Awarded Badges for a Single User</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AB-{00000}</displayFormat>
        <label>Awarded Badge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Awarded Badges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>